index column removed

--- a/customers_per_hour.ipynb
+++ b/customers_per_hour.ipynb
@@ -6,7 +6,7 @@
       "name": "customers_per_hour.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOj1Q/1AB2vM4MrVmRtJgSx",
+      "authorship_tag": "ABX9TyPyiICjqR6n5yqn0bbk7h6h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1468,9 +1468,9 @@
         "id": "gIUePXukliM4"
       },
       "source": [
-        "newDf.to_csv('customers_per_hour.csv')"
+        "newDf.to_csv('customers_per_hour.csv',index=False)"
       ],
-      "execution_count": 124,
+      "execution_count": 125,
       "outputs": []
     }
   ]
