Data description file is reffered

--- a/customers_per_hour.ipynb
+++ b/customers_per_hour.ipynb
@@ -6,7 +6,7 @@
       "name": "customers_per_hour.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPyiICjqR6n5yqn0bbk7h6h",
+      "authorship_tag": "ABX9TyPbWUliy3Cy70ySr1N2jlCx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
         "path='https://archive.ics.uci.edu/ml/machine-learning-databases/00352/Online%20Retail.xlsx'\n",
         "data=pd.read_excel(path)"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
       "source": [
         "data.info()"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
       "source": [
         "data.isna().sum()"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +145,7 @@
         "# Dropping all transactions with unregistered customers--- Identified by the Nan values in CustomerID column\n",
         "data.dropna(subset=['CustomerID'],inplace=True)"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "source": [
         "data.isna().sum()"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
         "# Cancelled Transactions\n",
         "data.loc[data['InvoiceNo'].str.match(r'^C.*')==True]"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,7 +393,7 @@
         "index_cancelled=data.loc[data['InvoiceNo'].str.match(r'^C.*')==True].index\n",
         "data.drop(index=index_cancelled,inplace=True)"
       ],
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -409,7 +409,7 @@
       "source": [
         "data.loc[data.Quantity<0]"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +474,7 @@
       "source": [
         "data"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +671,7 @@
       "source": [
         "data.dtypes"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +704,7 @@
         "#Changing CustomerID to int\n",
         "data['CustomerID']= data['CustomerID'].astype(int)"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -719,7 +719,7 @@
       "source": [
         "data.dtypes"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +754,7 @@
         "data['Date']=[d.date() for d in data['InvoiceDate']]\n",
         "data['Hour']=[d.hour for d in data['InvoiceDate']]"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,7 +770,7 @@
       "source": [
         "data"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -988,7 +988,7 @@
         "## Columns of our interest\n",
         "dateTimeData=data[['CustomerID','Date','Hour']]"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,7 +1000,7 @@
         "## Counting number of customers in a particular Date and Hour\n",
         "table=dateTimeData.groupby(['Date','Hour']).agg({\"CustomerID\": \"nunique\"})"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1012,7 @@
         "## Converting grouped object to DataFrame\n",
         "tab2=pd.DataFrame(table.reset_index())"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1035,7 +1035,7 @@
         "  #print(pd.DataFrame([newRow],columns=colNames))\n",
         "  newDf=newDf.append(pd.DataFrame([newRow],columns=colNames),ignore_index=True)\n"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1046,7 +1046,7 @@
       "source": [
         "newDf=newDf.sort_values(by=['Date']).reset_index()"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1057,7 +1057,7 @@
       "source": [
         "newDf=newDf.drop('index',axis=1)"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1073,7 +1073,7 @@
       "source": [
         "newDf"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1470,8 +1470,17 @@
       "source": [
         "newDf.to_csv('customers_per_hour.csv',index=False)"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-Vehi2uqfAmw"
+      },
+      "source": [
+        "Data description- https://github.com/rajivsam/cmi_count_data_modeling/blob/asif_ikbal_26_07_2021/customers_per_hour_desc.txt"
+      ]
     }
   ]
 }
