Task 1-3 is completed

--- a/notebooks/week_2_tasks.ipynb
+++ b/notebooks/week_2_tasks.ipynb
@@ -6,7 +6,7 @@
       "name": "week_2_tasks.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDqPWUp7MVLhMk17XaOvM+",
+      "authorship_tag": "ABX9TyOPBe28YYsW9l+WgQ3wVe5+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,15 @@
       ],
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "McibbGiIevkX"
+      },
+      "source": [
+        "Data description- https://github.com/rajivsam/cmi_count_data_modeling/blob/asif_ikbal_26_07_2021/customers_per_hour_desc.txt"
+      ]
     },
     {
       "cell_type": "code",
